--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
     "axios": "^1.1.3",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "https": "^1.0.0"
   }
 }
