--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "axios": "^1.1.3",
     "express": "^4.17.1",
-    "https": "^1.0.0"
+    "https": "^1.0.0",
+    "request": "^2.88.2"
   }
 }
