--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.1.3",
     "express": "^4.17.1",
     "https": "^1.0.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "dialogflow-fulfillment": "^0.6.1"
   }
 }
