--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "dependencies": {
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "axios": "^1.1.3",
+    "dialogflow-fulfillment": "^0.6.1",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "https": "^1.0.0",
-    "request": "^2.88.2",
-    "dialogflow-fulfillment": "^0.6.1"
+    "openai": "^3.2.1",
+    "request": "^2.88.2"
   }
 }
